[package]
name = "src"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15"
base64 = "0.21"
byteorder = "1.4"

[[bin]]
name = "pool_api"
path = "src/api/pool_api.rs"
